--- a/api/src/main/resources/templates/index.html
+++ b/api/src/main/resources/templates/index.html
@@ -1,56 +1,153 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
 
     <title>Pharmagator</title>
   </head>
   <body>
     <nav class="navbar navbar-dark bg-primary">
-        <div class="container-fluid">
-          <span class="navbar-brand mb-0 h1">Pharmagator</span>
-        </div>
-      </nav>
-      
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-10">
-                <table class="table table-bordered table-hover mt-3">
-                    <thead>
-                      <tr>
-                        <th scope="col">Pharmacy</th>
-                        <th scope="col">Medicine</th>
-                        <th scope="col">Price</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr th:each="item : ${itemsList}">
-                        <td th:text="${item.pharmacy}"></td>
-                        <td th:text="${item.medicine}"></td>
-                        <td th:text="${item.price}"></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                  <nav aria-label="...">
-                    <ul class="pagination">
-                        <li class="page-item" th:class = "${currentPage} > 0 ? 'page-item' : 'page-item disabled'" aria-current="page">
-                            <a class="page-link" th:href="@{/{page}(page = ${currentPage} - 1)}">
-                                Previous</a>
-                        </li>
-                        <li class="page-item " th:class = "${currentPage} >= ${pagesCount} ? 'page-item disabled':'page-item' " aria-current="page">
-                            <a class="page-link" th:href="@{/{page}(page = ${currentPage} + 1)}">Next</a>
-                        </li>
-                    </ul>
-                  </nav>
-              </div>
-          </div>
+      <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">Pharmagator</span>
       </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    </nav>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-10">
+          <table class="table table-bordered table-hover mt-3">
+            <div class="row">
+              <form
+                th:action="@{/{page}(page = ${currentPage})}"
+                id="searchForm"
+                method="get"
+                th:object="${searchRequest}"
+              >
+                <div class="col-4 mt-2">
+                  <div class="input-group">
+                    <input
+                      type="text"
+                      class="form-control"
+                      th:field="*{searchQuery}"
+                      placeholder="Enter medicine name..."
+                      aria-label="Recipient's username"
+                      aria-describedby="button-addon2"
+                    />
+                    <button
+                      class="btn btn-outline-secondary"
+                      type="submit"
+                      id="button-addon23"
+                    >
+                      Submit
+                    </button>
+                  </div>
+                </div>
+                <div class="col-8 mt-2">
+                  <div class="row">
+                    <div class="input-group">
+                      <div class="col-2">
+                        <input
+                          class="form-control"
+                          type="text"
+                          value="Sort order: "
+                          aria-label="Disabled input example"
+                          disabled
+                          readonly
+                        />
+                      </div>
+                      <select
+                        class="form-select"
+                        th:field="*{sortOrder}"
+                        aria-label="Default select example"
+                      >
+                        <option selected th:value="'price:ASC'">
+                          Price (from min to max)
+                        </option>
+                        <option th:value="'price:DESC'">
+                          Price (from max to min)
+                        </option>
+                        <option th:value="'medicine:ASC'">
+                          Medicine title (ascending)
+                        </option>
+                        <option th:value="'medicine:DESC'">
+                          Medicine title (descending)
+                        </option>
+                      </select>
+                      <button
+                        class="btn btn-outline-secondary"
+                        type="button|submit"
+                        id="button-addon2"
+                      >
+                        Submit
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+
+            <thead>
+              <tr>
+                <th scope="col">Pharmacy</th>
+                <th scope="col">Medicine</th>
+                <th scope="col">Price</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr th:each="item : ${itemsList}">
+                <td th:text="${item.pharmacy}"></td>
+                <td th:text="${item.medicine}"></td>
+                <td th:text="${item.price}"></td>
+              </tr>
+            </tbody>
+          </table>
+          <nav aria-label="...">
+            <ul class="pagination" th:if = "${pagesCount} > 0">
+              <li
+                class="page-item"
+                th:class="${currentPage} > 0 ? 'page-item' : 'page-item disabled'"
+                aria-current="page"
+              >
+                <input
+                        class="page-link"
+                        type="submit"
+                        form="searchForm"
+                        value="Previous"
+                        th:formAction="@{/{page}(page = ${currentPage} - 1)}"
+                >
+              </li>
+              <li
+                class="page-item"
+                th:class="${currentPage} >= ${pagesCount} ? 'page-item disabled':'page-item' "
+                aria-current="page"
+              >
+                <input
+                        class="page-link"
+                        type="submit"
+                        form="searchForm"
+                        value="Next"
+                        th:formAction="@{/{page}(page = ${currentPage} + 1)}"
+                />
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
