--- a/api/src/main/resources/templates/index.html
+++ b/api/src/main/resources/templates/index.html
@@ -24,82 +24,95 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-10">
-          <table class="table table-bordered table-hover mt-3">
-            <div class="row">
-              <form
-                th:action="@{/{page}(page = ${currentPage})}"
-                id="searchForm"
-                method="get"
-                th:object="${searchRequest}"
-              >
-                <div class="col-4 mt-2">
-                  <div class="input-group">
-                    <input
-                      type="text"
-                      class="form-control"
-                      th:field="*{searchQuery}"
-                      placeholder="Enter medicine name..."
-                      aria-label="Recipient's username"
-                      aria-describedby="button-addon2"
-                    />
-                    <button
-                      class="btn btn-outline-secondary"
-                      type="submit"
-                      id="button-addon23"
-                    >
-                      Submit
-                    </button>
-                  </div>
-                </div>
-                <div class="col-8 mt-2">
+          <div class="row">
+            <form
+              th:action="@{/{page}(page = ${currentPage})}"
+              id="searchForm"
+              method="get"
+              th:object="${searchRequest}"
+            >
+              <div class="card mt-4">
+                <h5 class="card-header">Search:</h5>
+                <div class="card-body">
                   <div class="row">
-                    <div class="input-group">
-                      <div class="col-2">
+                    <div class="col-4 mt-2">
+                      <div class="input-group">
                         <input
-                          class="form-control"
                           type="text"
-                          value="Sort order: "
-                          aria-label="Disabled input example"
-                          disabled
-                          readonly
+                          class="form-control"
+                          th:field="*{searchQuery}"
+                          placeholder="Enter medicine name..."
+                          aria-label="Recipient's username"
+                          aria-describedby="button-addon2"
                         />
+                      
                       </div>
-                      <select
-                        class="form-select"
-                        th:field="*{sortOrder}"
-                        aria-label="Default select example"
-                      >
-                        <option selected th:value="'price:ASC'">
-                          Price (from min to max)
-                        </option>
-                        <option th:value="'price:DESC'">
-                          Price (from max to min)
-                        </option>
-                        <option th:value="'medicine:ASC'">
-                          Medicine title (ascending)
-                        </option>
-                        <option th:value="'medicine:DESC'">
-                          Medicine title (descending)
-                        </option>
-                      </select>
-                      <button
-                        class="btn btn-outline-secondary"
-                        type="button|submit"
-                        id="button-addon2"
-                      >
-                        Submit
-                      </button>
+                    </div>
+                    <div class="col-8 mt-2">
+                      <div class="row">
+                        <div class="input-group">
+                          <div class="col-2">
+                            <input
+                              class="form-control"
+                              type="text"
+                              value="Sort order: "
+                              aria-label="Disabled input example"
+                              disabled
+                              readonly
+                            />
+                          </div>
+                          <select
+                            class="form-select"
+                            th:field="*{sortOrder}"
+                            aria-label="Default select example"
+                          >
+                            <option selected th:value="'price:ASC'">
+                              Price (from min to max)
+                            </option>
+                            <option th:value="'price:DESC'">
+                              Price (from max to min)
+                            </option>
+                            <option th:value="'medicine:ASC'">
+                              Medicine title (ascending)
+                            </option>
+                            <option th:value="'medicine:DESC'">
+                              Medicine title (descending)
+                            </option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-4 offset-8 mt-2">
+                      <a type="submit" th:href="@{/}" class="btn btn-outline-secondary float-end m-1">Reset</a>
+                      <input type="submit" class="btn btn-primary float-end m-1" value="Submit"></input>
                     </div>
                   </div>
                 </div>
-              </form>
+              </div>
+            </form>
+            <div class="col">
+              <div
+                class="mt-3 text-center"
+                th:if="${#lists.isEmpty(itemsList)}"
+              >
+                <h5>Oops!</h5>
+                <h6>
+                  Unfortunately, we couldn't find any medicine for this request
+                </h6>
+              </div>
             </div>
-
+          </div>
+          <table
+            class="table table-bordered table-hover mt-3"
+            th:if="${#lists.size(itemsList)} > 0"
+          >
             <thead>
               <tr>
                 <th scope="col">Pharmacy</th>
                 <th scope="col">Medicine</th>
-                <th scope="col">Price</th>
+                <th scope="col">Price, UAH</th>
               </tr>
             </thead>
             <tbody>
@@ -111,19 +124,19 @@
             </tbody>
           </table>
           <nav aria-label="...">
-            <ul class="pagination" th:if = "${pagesCount} > 0">
+            <ul class="pagination" th:if="${pagesCount} > 0">
               <li
                 class="page-item"
                 th:class="${currentPage} > 0 ? 'page-item' : 'page-item disabled'"
                 aria-current="page"
               >
                 <input
-                        class="page-link"
-                        type="submit"
-                        form="searchForm"
-                        value="Previous"
-                        th:formAction="@{/{page}(page = ${currentPage} - 1)}"
-                >
+                  class="page-link"
+                  type="submit"
+                  form="searchForm"
+                  value="Previous"
+                  th:formAction="@{/{page}(page = ${currentPage} - 1)}"
+                />
               </li>
               <li
                 class="page-item"
@@ -131,11 +144,11 @@
                 aria-current="page"
               >
                 <input
-                        class="page-link"
-                        type="submit"
-                        form="searchForm"
-                        value="Next"
-                        th:formAction="@{/{page}(page = ${currentPage} + 1)}"
+                  class="page-link"
+                  type="submit"
+                  form="searchForm"
+                  value="Next"
+                  th:formAction="@{/{page}(page = ${currentPage} + 1)}"
                 />
               </li>
             </ul>
